create github pages

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -39,7 +40,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">CH-1 , CH2 &amp; CH3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        MAIN CHILLED WATER SYSTEM LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-success display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -54,7 +55,7 @@
                         CHWP-RS.1 , RS.2 &amp; RS.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH-END CHW SYSTEM 
 <br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2XHIIgA" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2XHIIgA" class="btn btn-success display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -68,7 +69,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">CHWP-RS.4 , RS.5 &amp; RS.6</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL SOUTH-END CHW SYSTEM 
 <br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2z9sTVP" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2z9sTVP" class="btn btn-success display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -79,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
@@ -150,7 +151,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">DWHS-COMMERCIAL</h4>
                     <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM COMMERCIAL<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-danger display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -163,7 +164,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">HHWP-P.1 ,P.2 &amp; P.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH &amp; SOUTH ENDS HW PUMPS SYSTEM<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-danger display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -177,7 +178,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         DWHS-RESIDENTIAL</h4>
                     <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM RESIDENTIAL<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-danger display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -205,7 +206,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">HWU-B.1 &amp; B.2</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        MAIN HEATING WATER UNITS LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-primary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -218,7 +219,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">HHWP-P.1 ,P.2 &amp; P.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH &amp; SOUTH ENDS HW PUMPS SYSTEM<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-primary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -232,7 +233,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         DWHS-RESIDENTIAL</h4>
                     <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM RESIDENTIAL<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-primary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -260,7 +261,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">HWU-B.1 &amp; B.2</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        MAIN HEATING WATER UNITS LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/3crCrJY" class="btn btn-white display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -273,7 +274,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">HHWP-P.1 ,P.2 &amp; P.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH &amp; SOUTH ENDS HW PUMPS SYSTEM<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2xEBBe9" class="btn btn-white display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -287,7 +288,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         DWHS-RESIDENTIAL</h4>
                     <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM RESIDENTIAL<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-white display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -304,8 +305,11 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
+  </body>
 </html>
