--- a/eptccinemas.html
+++ b/eptccinemas.html
@@ -33,45 +33,40 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">
-                        INTRO WITH ICONS
-                    </h1>
+                        CINEMAS -BMS SYSTEM</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
-                        Full screen intro with background image, color overlay and icons
-                    </p>
+                        Building Management System Control &amp; Monitoring</p>
                     
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                            <a href="https://mobirise.co/">
-                                <span class="mbri-layers mbr-iconfont"></span>
+                            <a href="https://bit.ly/3ajozjN" target="_blank">
+                                <span class="mbr-iconfont mbri-responsive"></span>
                             </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                Multi Layout
-                            </h5>
+                                AHUS-LIST</h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
-                                    <span class="mbri-sun mbr-iconfont"></span>
+                                <a href="https://bit.ly/3ajozjN" target="_blank">
+                                    <span class="mbr-iconfont mbri-devices"></span>
                                 </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                Creative Idea
-                            </h5>
+                                AHU-CI.1</h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
-                                    <span class="mbri-cash mbr-iconfont"></span>
+                                <a href="https://bit.ly/3ajozjN" target="_blank">
+                                    <span class="mbr-iconfont mbri-touch"></span>
                                 </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                Target Buyers
-                            </h5>
+                                AHU-CI.2</h5>
                         </div>
 
                         
@@ -88,7 +83,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
