create github pages

--- a/eptccinemas.html
+++ b/eptccinemas.html
@@ -35,7 +35,7 @@
 
             <div class="card  col-12 col-md-6 col-lg-3">
                 <div class="card-img">
-                    <a href="https://bit.ly/3ajozjN" target="_blank"><span class="mbr-iconfont mbri-responsive"></span></a>
+                    <a href="https://bit.ly/2XLNPwh" target="_blank"><span class="mbr-iconfont mbri-responsive"></span></a>
                 </div>
                 <div class="card-box align-center">
                     
@@ -82,7 +82,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="features8 cid-rWumHGCY3D" id="features8-4a">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="features8 cid-rWumHGCY3D" id="features8-4a">
 
     
 
